ft():Add logout functionality
