# src/swagger.json
@@ -536,7 +536,33 @@
         }
       }
     },
-    "/api/v1/users/{email}/status": {
+    "/api/v1/users/logout": {
+      "post": {
+        "tags":["User Logout"],
+        "security": [
+          {
+            "jwt": [],
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Logout successful",
+            "definitions": {
+              "message": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/users/{id}/status": {
       "patch": {
         "security": [
           {
